# semester3

./: .gitignore
arithmetic/hw1/: hw1.sln  test_input.txt
arithmetic/hw1/Knuth1/: Program.cs
arithmetic/hw1/Knuth3/: Program.cs
arithmetic/hw1/Knuth6/: Program.cs
arithmetic/hw1/application/: Program.cs  application.csproj
arithmetic/hw1/helpers/: Auxiliary.cs  Division.cs  Functions.cs  Limit.cs  OperationCounter.cs  Polynomial.cs  Polynomial2D.cs  PoweredRationalFunction.cs  RationalFunction.cs  Recurrence.cs
arithmetic/hw1/task1/: Program.cs  task1.csproj
arithmetic/hw1/task2/: Program.cs
arithmetic/hw1/task3/: Program.cs
arithmetic/hw1/task4/: Program.cs
arithmetic/hw1/task6/: Program.cs
arithmetic/hw1/task8/: Program.cs
arithmetic/hw2/: hw2.sln
arithmetic/hw2/Task1/: Program.cs
arithmetic/hw2/Task2/: Program.cs
arithmetic/hw2/Task3/: Program.cs
arithmetic/hw2/Task4/: Program.cs
arithmetic/hw2/Task5/: Program.cs
arithmetic/hw2/Task6/: Program.cs
arithmetic/hw2/Task7/: Program.cs
arithmetic/hw2/Task8/: Program.cs
arithmetic/hw2/application/: Program.cs  application.csproj
arithmetic/hw2/helpers/: BinaryPolynomial.cs  Gf2Field.cs
crypto/hw1/: CMakeLists.txt  menu.cpp
crypto/hw1/task4/: run.h  task4.cpp
crypto/hw5/: CMakeLists.txt  menu.cpp
crypto/hw5/task1/: task1.cpp  task1.h
crypto/hw5/task2/: task2.cpp  task2.h
crypto/hw6/: CMakeLists.txt  menu.cpp
probability/hw1/: hw1.sln
probability/hw3/: CMakeLists.txt  menu.cpp
probability/hw3/task2/: task2.cpp
probability/hw3/task3/: task3.cpp  task3.h
(+27 files in other folders)
